add media query for responsive

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 layout: template
 title: About
 ---
-<p>Nemo is coder concentrate on Frontend Development. Now he is a current graduated student in school of Software Engineering.</p>
-<p><a href="resume.html">My Resume</a></p>
+<p>Nemo is coder concentrate on Web Front-end Development. Now he is a postgraduate in the school of Software Engineering.</p>
+<p>He is also a new gay contributed to Github.</p>
+<p>My <a href="resume.html">resume</a></p>
 <p>You can contact with him by E-mail : <a href="mailto:liaozksysu@gmail.com">liaozksysu@gmail.com</a></p>
