--- a/category.html
+++ b/category.html
@@ -3,21 +3,27 @@ layout: template
 title: Category
 ---
 <ul class="tag_list"">
+{% if site.tags.first[0] == null %}
 	{% for tag in site.tags %}      
     <li>
-    <a href="tags.html#{{ tag | first | cgi_encode }}" class="{{ tag | first }}">{{ tag | first }}</a>
+    <a href="tags.html#{{ tag | first | cgi_encode }}">{{ tag }}<span>{{site.tag[tag].size}}</span></a>
     </li>
-    {% endfor %}    
+    {% endfor %}  
+{% else %}
+    {% for tag in site.tags %} 
+    	<li><a href="{{ BASE_PATH }}{{ site.JB.tags_path }}#{{ tag[0] }}-ref">{{ tag[0] }} <span>{{ tag[1].size }}</span></a></li>
+    {% endfor %}
+  {% endif %}  
 </ul>
 {% for tag in site.tags %}
-    <h1>{{ tag | first }}<a name="{{ tag | first | cgi_escape }}"></a></h1>
-    <ul class="postList">	
-        {% for posts in tag %}
-            {% for post in posts %}
-            {% if post.title %}
-            <li><a href="{{ post.url }}">{{ post.title }} <span>{{ post.date | date: '%y.%m.%d' }}</span></a></li>						
-            {% endif %}
-            {% endfor %}
+<h1 class="post_title">{{ tag | first }}</h1>
+<ul class="post_list">	
+    {% for posts in tag %}
+        {% for post in posts %}
+        {% if post.title %}
+        <li><a href="{{ post.url }}">{{ post.title }} <span>{{ post.date | date: '%y-%m-%d' }}</span></a></li>						
+        {% endif %}
         {% endfor %}
-    </ul>
     {% endfor %}
+</ul>
+{% endfor %}
