update the resume

--- a/resume.html
+++ b/resume.html
@@ -5,16 +5,16 @@ title: Resume
 <article class="resume_part">
 	<h2>Nemo（ZeKai . Liao）</h2>
 	<ul>
-		<li>Blog - <a href="http://caesorblog.sinaapp.com/">http://caesorblog.sinaapp.com/</a></li>
-		<li>Github - <a href="#">...</a></li>
+		<li>Blog - <a href="http://caesor.github.io//">http://caesor.github.io/</a></li>
+		<li>Github - <a href="https://github.com/Caesor">https://github.com/Caesor</a></li>
 		<li>Email - <a href="mailto:liaozksysu@gmail.com">liaozksysu@gmail.com</a></li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Programming skills</h3>
 	<ul>
-		<li>Familer with Html / CSS / Javascript / JQuery / AJAX</li>
-		<li>Intrested in Html5 / CSS3 development</li>
+		<li>Familer with Html / CSS / Javascript / JQuery / Zepto / AJAX / Canvas</li>
+		<li>Intrested in Html5 / CSS3 / WebGL development</li>
 		<li>Familer with Interaction Design</li>
 		<li>Familer with C / C++ / Python</li>
 		<li>Backend Flask / Django</li>
@@ -44,7 +44,8 @@ title: Resume
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
-		<li>Empty now...</li>
+		<li>Puzzle - Canvas manipulating > <a href="http://caesor.github.io/puzzle-canvas/">Demo</a></li>
+		<li>Puzzle - DOM manipulating > <a href="http://caesor.github.io/puzzle/">Demo</a></li>	
 	</ul>		
 </article>
 <article class="resume_part">
