--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: template
 title: About
 ---
-<p>Nemo is coder concentrated on Web Front-end Development. Now he is a master in USTC.</p>
+<p>Nemo is coder concentrated on Web Front-end Development.</p>
 <p>He is also a new gay contributed to Github.</p>
 <p>My <a href="resume.html">resume</a></p>
 <p>You can contact with him by E-mail : <a href="mailto:liaozksysu@gmail.com">liaozksysu@gmail.com</a></p>
