--- a/resume.html
+++ b/resume.html
@@ -13,28 +13,28 @@ title: Resume
 <article class="resume_part">
 	<h3>Programming skills</h3>
 	<ul>
-		<li>Familer with Html / CSS / Javascript / JQuery / Zepto / AJAX / Canvas</li>
+		<li>Familer with Html / CSS / Javascript / AJAX / Canvas</li>
 		<li>Intrested in Html5 / CSS3 / WebGL development</li>
 		<li>Familer with Interaction Design</li>
 		<li>Familer with C / C++ / Python</li>
-		<li>Backend Flask / Django</li>
+		<li>JQuery / Zepto / Three.js / Angular / Backend Flask / Django</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Programming tools</h3>
 	<ul>
 		<li>Version control: SVN / Git</li>
-		<li>Editor: Sublime Text / Vim</li>
-		<li>OS: OS / Linux</li>
+		<li>Editor: Sublime Text 3 / Vim</li>
+		<li>OS: Mac OS / Linux</li>
 	</ul>		
 </article>
-<article class="resume_part">
+<!--<article class="resume_part">
 	<h3>Academic Achievements</h3>
 	<ul>
 		<li>Country two and so on scholarship in 2009(Undergraduate)</li>
 		<li>Country two scholarship in 2014(Postgraduate)</li>
 	</ul>		
-</article>
+--></article>
 <article class="resume_part">
 	<h3>Experience</h3>
 	<ul>
@@ -44,6 +44,7 @@ title: Resume
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
+		<li>Online Image Editor > <a href="http://caesor.github.io/canvas-image-editor">Demo</a></li>
 		<li>Puzzle - Canvas manipulating > <a href="http://caesor.github.io/puzzle-canvas/">Demo</a></li>
 		<li>Puzzle - DOM manipulating > <a href="http://caesor.github.io/puzzle/">Demo</a></li>	
 	</ul>		
