delete the title of index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: template
 title: Archive
 ---
-<h1 class="post_title">Newest article</h1>
+<!--<h1 class="post_title">Newest article</h1>-->
 <section class="article_list">
 	<ul>
 		{% for post in site.posts %}
