--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@ layout: template
 title: Resume
 ---
 <article class="resume_part">
-	<h2>Nemo（ZeKai . Liao）</h2>
+	<h2>Caesor（ZeKai . Liao）</h2>
 	<ul>
 		<li>Blog - <a href="http://caesor.github.io//">http://caesor.github.io/</a></li>
 		<li>Github - <a href="https://github.com/Caesor">https://github.com/Caesor</a></li>
