--- a/resume.html
+++ b/resume.html
@@ -16,8 +16,9 @@ title: Resume
 		<li>Familer with Html / CSS / Javascript / AJAX / Canvas</li>
 		<li>Intrested in Html5 / CSS3 / WebGL development</li>
 		<li>Familer with Interaction Design</li>
-		<li>Familer with C / C++ / Python</li>
-		<li>JQuery / Zepto / Three.js / Angular / Backend Flask / Django</li>
+		<li>Familer with C / C++ / Data Structure</li>
+		<li>Interested in Python</li>
+		<li>JQuery / Zepto </li>
 	</ul>		
 </article>
 <article class="resume_part">
@@ -25,28 +26,31 @@ title: Resume
 	<ul>
 		<li>Version control: SVN / Git</li>
 		<li>Editor: Sublime Text 3 / Vim</li>
+		<li>Tools(learning): Grunt / Bower / Yeoman</li>
 		<li>OS: Mac OS / Linux</li>
 	</ul>		
 </article>
-<!--<article class="resume_part">
+<article class="resume_part">
 	<h3>Academic Achievements</h3>
 	<ul>
 		<li>Country two and so on scholarship in 2009(Undergraduate)</li>
-		<li>Country two scholarship in 2014(Postgraduate)</li>
+		<li>Country two scholarship in 2014(Master)</li>
 	</ul>		
---></article>
+</article>
 <article class="resume_part">
 	<h3>Experience</h3>
 	<ul>
-		<li>Web Font-end developer in LejiaLife company during May.2014 ~ Aug.2014</li>
+		<li>Develop a Fresh Store in LejiaLife company during May.2014 ~ Aug.2014. <a href="http://m.lejialife.com/tmall?vid=4b34055024223&_debug=1">Project Address</a></li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
-		<li>Online Image Editor > <a href="http://caesor.github.io/canvas-image-editor">Demo</a></li>
-		<li>Puzzle - Canvas manipulating > <a href="http://caesor.github.io/puzzle-canvas/">Demo</a></li>
+		<li>Photography on mobile(Resize brower window & Use your mobile) > <a href="http://caesor.github.io/mobile-gallary-demo/">Demo</a></li>
+		<li><span style="color:#f80">(Unfinished)</span>Online Image Editor > <a href="http://caesor.github.io/canvas-image-editor">Demo</a></li>
+		<li>Puzzle - Canvas manipulating > <a href="http://caesor.github.io/canvas-puzzle/">Demo</a></li>
 		<li>Puzzle - DOM manipulating > <a href="http://caesor.github.io/puzzle/">Demo</a></li>	
+		<li>Swift-Calculator-ios > <a href="https://github.com/Caesor/Swift-Calculator">Repository</a></li>
 	</ul>		
 </article>
 <article class="resume_part">
