--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@ title: Resume
 		<li>Familer with Interaction Design</li>
 		<li>Familer with C / C++ / Data Structure</li>
 		<li>Interested in Python</li>
-		<li>JQuery / Zepto </li>
+		<li>JQuery / Zepto / Angular</li>
 	</ul>		
 </article>
 <article class="resume_part">
