--- a/resume.html
+++ b/resume.html
@@ -46,9 +46,9 @@ title: Resume
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
-		<li><span style="color:#f80">(Unfinished)</span>Visual-Sorting <a href="http://caesor.github.io/visual-sorting/">Demo</a></li>
-		<li><span style="color:#f80">(Needs to be optimized)</span> Tangram (七巧板) <a href="http://caesor.github.io/tangram/">Demo</a></li>
-		<li>Scratch-Card (For mobile invitation) <a href="http://caesor.github.io/Scratch-Card/">Demo</a></li>
+		<li><span style="color:#f80">(Unfinished)</span>Visual-Sorting > <a href="http://caesor.github.io/visual-sorting/">Demo</a></li>
+		<li><span style="color:#f80">(Needs to be optimized)</span> Tangram (七巧板) > <a href="http://caesor.github.io/tangram/">Demo</a></li>
+		<li>Scratch-Card (For mobile invitation) > <a href="http://caesor.github.io/Scratch-Card/">Demo</a></li>
 		<li>Photography on mobile(Resize brower window & Use your mobile) > <a href="http://caesor.github.io/mobile-gallary-demo/">Demo</a></li>
 	<!--	<li><span style="color:#f80">(Unfinished)</span>Online Image Editor > <a href="http://caesor.github.io/canvas-image-editor">Demo</a></li> -->
 		<li>Puzzle - Canvas manipulating > <a href="http://caesor.github.io/canvas-puzzle/">Demo</a></li>
