--- a/resume.html
+++ b/resume.html
@@ -13,34 +13,34 @@ title: Resume
 <article class="resume_part">
 	<h3>Programming skills</h3>
 	<ul>
-		<li>Familer with Html / CSS / Javascript / AJAX / Canvas</li>
+		<li>Familer with Html / CSS / Javascript / Ajax / Canvas</li>
 		<li>Intrested in Html5 / CSS3 / WebGL development</li>
-		<li>Familer with Interaction Design</li>
+		<li>Intrested in Interaction Design</li>
 		<li>Familer with C / C++ / Data Structure</li>
-		<li>Interested in Python</li>
-		<li>JQuery / Zepto / Angular</li>
+		<li>Familer with jQuery / Zepto / AngularJS frame</li>
+		<li>Known about php / node.js / python-Django back-end development</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Programming tools</h3>
 	<ul>
+		<li>Building Tools: Yeoman / Bower / Grunt</li>
 		<li>Version control: SVN / Git</li>
 		<li>Editor: Sublime Text 3 / Vim</li>
-		<li>Tools(learning): Grunt / Bower / Yeoman</li>
-		<li>OS: Mac OS / Linux</li>
+		<li>OS: Mac OS</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Academic Achievements</h3>
 	<ul>
-		<li>Country two and so on scholarship in 2009(Undergraduate)</li>
 		<li>Country two scholarship in 2014(Master)</li>
+		<li>Country two & three scholarship in 2010 & 2011(Undergraduate)</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Experience</h3>
 	<ul>
-		<li>Develop a Fresh Store in LejiaLife company during May.2014 ~ Aug.2014. <a href="http://m.lejialife.com/tmall?vid=4b34055024223&_debug=1">Project Address</a></li>
+		<li>Developing a Mobile Fresh Store in LejiaLife company during May.2014 ~ Aug.2014. <a href="http://m.lejialife.com/tmall?vid=4b34055024223&_debug=1">Project Address</a></li>
 	</ul>		
 </article>
 <article class="resume_part">
