--- a/resume.html
+++ b/resume.html
@@ -46,6 +46,7 @@ title: Resume
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
+		<li><span class="marked">(Doing)</span> A shopping mall for comparing price (Using AngularJS) > <a href="http://caesor.github.io/uumai/">Demo</a></li>
 		<li><span class="marked">(Unfinished)</span>Visual-Sorting > <a href="http://caesor.github.io/visual-sorting/">Demo</a></li>
 		<li><span class="marked">(Needs to be optimized)</span> Tangram (七巧板) > <a href="http://caesor.github.io/tangram/">Demo</a></li>
 		<li>Scratch-Card (For mobile invitation) > <a href="http://caesor.github.io/Scratch-Card/">Demo</a></li>
