--- a/resume.html
+++ b/resume.html
@@ -13,26 +13,28 @@ title: Resume
 <article class="resume_part">
 	<h3>Programming skills</h3>
 	<ul>
-		<li>Familer with Html / CSS / Javascript / Ajax / Canvas</li>
-		<li>Intrested in Html5 / CSS3 / WebGL development</li>
-		<li>Intrested in Interaction Design</li>
+		<li>Familer React Framework and Mobile H5 Optimization</li>
+		<li>Familer with Html5 / CSS3 / Javascript / Ajax / Canvas</li>
+		<li>Intrested in Node back-end and Koa</li>
 		<li>Familer with C / C++ / Data Structure</li>
 		<li>Familer with jQuery / Zepto / AngularJS frame</li>
-		<li>Known about php / node.js / python-Django back-end development</li>
+		<li>Known about php / python-Django back-end development</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Programming tools</h3>
 	<ul>
-		<li>Building Tools: Yeoman / Bower / Grunt</li>
+		<li>Building Tools: Webpack / Gulp / Yeoman / Bower / Grunt</li>
 		<li>Version control: SVN / Git</li>
-		<li>Editor: Sublime Text 3 / Vim</li>
+		<li>Editor: Visual Studio Code / Sublime Text 3 / Vim</li>
 		<li>OS: Mac OS</li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Academic Achievements</h3>
 	<ul>
+		<li>Outstanding Graduates in USTC</li>
+		<li>Country two scholarship in 2015(Master)</li>
 		<li>Country two scholarship in 2014(Master)</li>
 		<li>Country two & three scholarship in 2010 & 2011(Undergraduate)</li>
 	</ul>		
@@ -40,12 +42,16 @@ title: Resume
 <article class="resume_part">
 	<h3>Experience</h3>
 	<ul>
+		<li>Focused on QQ Tribe and Now living during Sep.2015 ~ Now</li>
 		<li>Developing a Mobile Fresh Store in LejiaLife company during May.2014 ~ Aug.2014. <a href="http://m.lejialife.com/tmall?vid=4b34055024223&_debug=1">Project Address</a></li>
 	</ul>		
 </article>
 <article class="resume_part">
 	<h3>Open Source Projects</h3>
 	<ul>
+		<li>H5 Imageviewer(Imageview component built with react)<a href="https://alloyteam.github.io/AlloyViewer/examples/">Demo</a></li>
+		<li>Alert component imitated iOS build with react<a href="https://github.com/Caesor/react-ios-alert">Repository</a></li>
+		<li>A react singleton decorator.<a href="https://github.com/Caesor/react-singleton">Repository</a></li>
 		<li><span class="marked">(Doing)</span> A shopping mall for comparing price (Using AngularJS) > <a href="http://caesor.github.io/uumai/">Demo</a></li>
 		<li><span class="marked">(Unfinished)</span>Visual-Sorting > <a href="http://caesor.github.io/visual-sorting/">Demo</a></li>
 		<li><span class="marked">(Needs to be optimized)</span> Tangram (七巧板) > <a href="http://caesor.github.io/tangram/">Demo</a></li>
